# multi-harness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.harness/skills/publish/: SKILL.md
src/multi_harness/: cli.py  config.py  harness.py  status.py  symlinks.py
src/multi_harness/agents/: __init__.py  antigravity.py  claude.py  codex.py  copilot.py  opencode.py  spec.py
tests/: conftest.py  test_add_remove.py  test_init.py  test_status.py
